fixed misaligned columns events list

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -444,7 +444,7 @@ h3 {
   }
 
   .list-events {
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .desktop-only {
